--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 		<p class="greeting">Welcome, {{session['username']}}.       <a href="/files">your files</a></p>
 		<p class="separator">-------------------------------------------------------------</p>
 		{% endif %}
-		<p>Welcome to my website. I am a programmer from lithuania, with interests in graphical design, engineering, and video games. This website also serves as an image hosting site, but since i'm a little short on storage space, you will have to contact me for registration.
+		<p>Welcome to my website. I am a programmer from Lithuania, with interests in graphical design, engineering, and video games. This website also serves as an image hosting site, but since i'm a little short on storage space, you will have to contact me for registration.
 		</p>
 		<p> email: <a href="mailto:nojusr@gmail.com?subject=contakt lil ol kelp">nojusr@gmail.com</a></p>
 		<p>github: <a href="https://github.com/nojusr">https://github.com/nojusr</a></p>
