--- a/templates/upload.html
+++ b/templates/upload.html
@@ -21,14 +21,14 @@
     |:|  |        \:\__\        \:\__\              
      \|__|         \/__/         \/__/              
 			</pre>
-			<p class="separator">-------------------------------------------------------------</p>
+			<p class="separator">-----------------------------------------------------------------</p>
 			<div class="links">
 				<a href="/">back</a>
 				<a href="/files">your files</a>
 			</div>
-			<p class="separator">-------------------------------------------------------------</p>
+			<p class="separator">-----------------------------------------------------------------</p>
 			<p>You can upload to this site using curl like so:</p>
-			<p class="code">$curl -F'u_clean=on' -F'upload_key=youruploadkey' -F'u_file=@/path/to/your.file' https://kelp.ml/upload</p>
+			<div class="code">$curl -F'u_clean=on' -F'upload_key=youruploadkey' -F'u_file=@/path/to/your.file' https://kelp.ml/upload</div>
 			<p>The command above, assuming that everything is correct, will return nothing but a link</p>
 			
 			{% if msg is defined %}
