finalized responsive css

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
 		<meta name="description" content="kelp's website">
 		<title>kelp's place</title>
 		<link rel="stylesheet" type="text/css" href="static/global.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -21,12 +21,12 @@
     |:|  |        \:\__\        \:\__\              
      \|__|         \/__/         \/__/              
 		</pre>
-		<p class="separator">-----------------------------------------------------------------</p>
+		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 		<div class="links">
 			<a href="/">back</a>
 			<a href="/login">login</a>
 		</div>
-		<p class="separator">-----------------------------------------------------------------</p>
+		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 		{% if msg is defined %}
 			<p class="msg">{{ msg }}</p>
 		{% endif %}
