--- a/templates/rice.html
+++ b/templates/rice.html
@@ -5,6 +5,7 @@
 		<meta name="description" content="kelp's website">
 		<title>kelp's place</title>
 		<link rel="stylesheet" type="text/css" href="static/global.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -21,11 +22,11 @@
     |:|  |        \:\__\        \:\__\              
      \|__|         \/__/         \/__/              
 		</pre>
-		<p class="separator">-----------------------------------------------------------------</p>
+		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 		<div class="links">
 			<a href="/">back</a>
 		</div>
-		<p class="separator">-----------------------------------------------------------------</p>
+		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 		<p>desktop:</p>
 		<p>phone:</p>
 		
