--- a/static/global.css
+++ b/static/global.css
@@ -114,13 +114,13 @@ th{
 }
 
 /*===MOBILE===*/
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 1000px) {
 
 	/*GENERAL ELEMENTS*/
 	/*CLASSES*/
 	.wrapper{
 		width: 90%;
-		font-size: 1.5em;
+		font-size: 4vw;
 	}
 	
 	.title{
