--- a/templates/files.html
+++ b/templates/files.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
 		<meta name="description" content="kelp's website">
 		<title>kelp's place</title>
 		<link rel="stylesheet" type="text/css" href="static/global.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -21,7 +21,7 @@
     |:|  |        \:\__\        \:\__\              
      \|__|         \/__/         \/__/              
 		</pre>
-		<p class="separator">-----------------------------------------------------------------</p>
+		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 		<div class="links">
 			<a href="/">back</a>
 			<a href="/upload">uploads</a>
@@ -31,7 +31,7 @@
 				<a href="/login">login</a>
 			{% endif %}
 		</div>
-		<p class="separator">-----------------------------------------------------------------</p>
+		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 		{% if session['username'] is defined %}
 			<p>Here are your files, {{session['username']}}.</p>
 		
