--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
 		<meta name="description" content="kelp's website">
 		<title>kelp's place</title>
 		<link rel="stylesheet" type="text/css" href="static/global.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -21,12 +21,12 @@
     |:|  |        \:\__\        \:\__\              
      \|__|         \/__/         \/__/              
 			</pre>
-			<p class="separator">-----------------------------------------------------------------</p>
+			<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 			<div class="links">
 				<a href="/">back</a>
 				<a href="/files">your files</a>
 			</div>
-			<p class="separator">-----------------------------------------------------------------</p>
+			<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 			<p>You can upload to this site using curl like so:</p>
 			<div class="code">$curl -F'u_clean=on' -F'upload_key=youruploadkey' -F'u_file=@/path/to/your.file' https://kelp.ml/upload</div>
 			<p>The command above, assuming that everything is correct, will return nothing but a link</p>
