--- a/templates/files.html
+++ b/templates/files.html
@@ -1,28 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta name="description" content="kelp's website">
-		<title>kelp's place</title>
-		<link rel="stylesheet" type="text/css" href="static/global.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>
-		<div class="wrapper">
-		<pre class="title">
-      ___           ___           ___       ___     
-     /\__\         /\  \         /\__\     /\  \    
-    /:/  /        /::\  \       /:/  /    /::\  \   
-   /:/__/        /:/\:\  \     /:/  /    /:/\:\  \  
-  /::\__\____   /::\~\:\  \   /:/  /    /::\~\:\  \ 
- /:/\:::::\__\ /:/\:\ \:\__\ /:/__/    /:/\:\ \:\__\
- \/_|:|~~|~    \:\~\:\ \/__/ \:\  \    \/__\:\/:/  /
-    |:|  |      \:\ \:\__\    \:\  \        \::/  / 
-    |:|  |       \:\ \/__/     \:\  \        \/__/  
-    |:|  |        \:\__\        \:\__\              
-     \|__|         \/__/         \/__/              
-		</pre>
-		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
-		<div class="links">
+{% extends "base.html" %}
+{% block links %}
 			<a href="/">back</a>
 			<a href="/upload">uploads</a>
 			{% if session['username'] is defined %}
@@ -30,38 +7,39 @@
 			{% else %}
 				<a href="/login">login</a>
 			{% endif %}
-		</div>
-		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
-		{% if session['username'] is defined %}
-			<p>Here are your files, {{session['username']}}.</p>
-		
-			{% if files is defined %}
-				<table class="files">
-					<thead>
-						<th>filename</th>
-						<th>filetype</th>
-						<th></th>
-					</thead>
-					
-						{% for file in files %}
-							<tr>
-								<td class="filename"><a href="/{{file[3]}}.{{file[2]}}">{{file[3]}}</a></td>
-								<td>{{file[2]}}</td>
-								<td><a href="/delete/{{file[3]}}.{{file[2]}}">delete</a></td>
-							</tr>
-						{% endfor %}
-				</table>
-			{% else %}
-				<p>you don't have any files.</p>
-			{% endif %}
-		
-		{% else %}
-			<p>not logged in.</p>
-		{% endif %}
-		
+{% endblock %}
 
-		</div>
-	</body>
+{% block content %}
 	
+	{% if msg is defined %}
+		<p class="msg">{{ msg }}</p>
+	{% endif %}		
+	{% if session['username'] is defined %}
+		<p>Here are your files, {{session['username']}}.</p>
 	
-</html>
+		{% if files is defined %}
+			<table class="files">
+				<thead>
+					<th>filename</th>
+					<th>filetype</th>
+					<th></th>
+				</thead>
+				
+					{% for file in files %}
+						<tr>
+							<td class="filename"><a href="/{{file[3]}}.{{file[2]}}">{{file[3]}}</a></td>
+							<td>{{file[2]}}</td>
+							<td><a href="/delete/{{file[3]}}.{{file[2]}}">delete</a></td>
+						</tr>
+					{% endfor %}
+			</table>
+		{% else %}
+			<p>you don't have any files.</p>
+		{% endif %}
+	
+	{% else %}
+		<p>not logged in.</p>
+	{% endif %}
+	
+{% endblock %}
+
