--- a/templates/login.html
+++ b/templates/login.html
@@ -1,42 +1,15 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta name="description" content="kelp's website">
-		<title>kelp's place</title>
-		<link rel="stylesheet" type="text/css" href="static/global.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>
-		<div class="wrapper">
-		<pre class="title">
-      ___           ___           ___       ___     
-     /\__\         /\  \         /\__\     /\  \    
-    /:/  /        /::\  \       /:/  /    /::\  \   
-   /:/__/        /:/\:\  \     /:/  /    /:/\:\  \  
-  /::\__\____   /::\~\:\  \   /:/  /    /::\~\:\  \ 
- /:/\:::::\__\ /:/\:\ \:\__\ /:/__/    /:/\:\ \:\__\
- \/_|:|~~|~    \:\~\:\ \/__/ \:\  \    \/__\:\/:/  /
-    |:|  |      \:\ \:\__\    \:\  \        \::/  / 
-    |:|  |       \:\ \/__/     \:\  \        \/__/  
-    |:|  |        \:\__\        \:\__\              
-     \|__|         \/__/         \/__/              
-		</pre>
-		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
-		<div class="links">
-			<a href="/">back</a>
-			<a href="/register">register</a>
-		</div>
-		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
-		{% if msg is defined %}
-			<p class="msg">{{ msg }}</p>
-		{% endif %}		
-		<form method="post">
-			 <p>username: <input type=text name=username required></p>
-			 <p>password: <input type=password name=password required></p>
-			 <p><input type=submit value=login></p>
-		</form>
-		</div>
-	</body>
-	
-	
-</html>
+{% extends "base.html" %}
+{% block links %}
+	<a href="/">back</a>
+	<a href="/register">register</a>
+{% endblock %}
+{% block content %}
+	{% if msg is defined %}
+		<p class="msg">{{ msg }}</p>
+	{% endif %}		
+	<form method="post">
+		 <p>username: <input type=text name=username required></p>
+		 <p>password: <input type=password name=password required></p>
+		 <p><input type=submit value=login></p>
+	</form>
+{% endblock %}
