--- a/templates/rice.html
+++ b/templates/rice.html
@@ -1,37 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		
-		<meta name="description" content="kelp's website">
-		<title>kelp's place</title>
-		<link rel="stylesheet" type="text/css" href="static/global.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>
-		<div class="wrapper">
-		<pre class="title">
-      ___           ___           ___       ___     
-     /\__\         /\  \         /\__\     /\  \    
-    /:/  /        /::\  \       /:/  /    /::\  \   
-   /:/__/        /:/\:\  \     /:/  /    /:/\:\  \  
-  /::\__\____   /::\~\:\  \   /:/  /    /::\~\:\  \ 
- /:/\:::::\__\ /:/\:\ \:\__\ /:/__/    /:/\:\ \:\__\
- \/_|:|~~|~    \:\~\:\ \/__/ \:\  \    \/__\:\/:/  /
-    |:|  |      \:\ \:\__\    \:\  \        \::/  / 
-    |:|  |       \:\ \/__/     \:\  \        \/__/  
-    |:|  |        \:\__\        \:\__\              
-     \|__|         \/__/         \/__/              
-		</pre>
-		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
-		<div class="links">
-			<a href="/">back</a>
-		</div>
-		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
-		<p>desktop:</p>
-		<p>phone:</p>
-		
-		</div>
-	</body>
-	
-	
-</html>
+{% extends "base.html" %}
+{% block links %}
+	<a href="/">back</a>
+{% endblock %}
+{% block content %}
+	<p>desktop:</p>
+	<p>phone:</p>
+{% endblock %}
