--- a/static/global.css
+++ b/static/global.css
@@ -113,6 +113,14 @@ th{
 	width: 100%;
 }
 
+#thumbnail{
+	height: auto; 
+	width: auto; 
+	max-width: 300px; 
+	max-height: 300px
+}
+
+
 /*===MOBILE===*/
 @media only screen and (max-width: 1000px) {
 
