--- a/static/global.css
+++ b/static/global.css
@@ -75,7 +75,7 @@ th{
 }
 
 .links a{
-	width: 100px;
+	width: 110px;
 	padding: 3px;
 }
 
@@ -113,6 +113,14 @@ th{
 	width: 100%;
 }
 
+.stats{
+	white-space: pre;
+	margin: 0px;
+	padding: 3px;
+}
+
+/* ID'S */
+
 #thumbnail{
 	height: auto; 
 	width: auto; 
@@ -122,7 +130,7 @@ th{
 
 
 /*===MOBILE===*/
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
 
 	/*GENERAL ELEMENTS*/
 	/*CLASSES*/
@@ -132,7 +140,10 @@ th{
 	}
 	
 	.title{
-		font-size: 2vw;
+		font-size: 2.5vw;
+	}
+	.stats{
+		font-size: 3.8vw;
 	}
 
 }
