--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="description" content="kelp's website">
 		<title>kelp's place</title>
-		<link rel="stylesheet" type="text/css" href="static/global.css">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='global.css') }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
