goddamnit another fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 	{% if session['username'] is defined %}
-		<p class="greeting">Welcome, {{session['username']}}.       <a href="/files/0">your files</a></p>
+		<p class="greeting">Welcome, {{session['username']}}.       <a href="/files">your files</a></p>
 		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 	{% endif %}
 	<p>Welcome to my website. I am a programmer from Lithuania, with interests in graphic design, engineering, and video games. This website also serves as an image hosting site, but since i'm a little short on storage space, you will have to contact me for registration.</p>
