--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block links %}
 	<a href="/">back</a>
-	<a href="/files/0">your files</a>
+	<a href="/files">your files</a>
 {% endblock %}
 {% block content %}
 	<p class="stats">Upload stats:   Disk usage:  {{stats[0]}}   Files: {{stats[1]}}   Users: {{stats[2]}} </p>
