--- a/templates/admin.html
+++ b/templates/admin.html
@@ -27,22 +27,73 @@
 				<a href="/upload">upload</a>
 			</div>
 			<p class="separator">---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
-			<form method="post">
-				 <p>search: 
-					<input type=text name=search_query>
-					sort by:
-					<select name=search_by>
+			<form action="{{ url_for('admin') }}">
+				{% if searchdata is defined %}
+				 <p class="actions">search: <input type=text name=search_query {% if searchdata[1] != -1 %}value={{ searchdata[1] }}{% endif %} >     sort by: <select name=search_by>
+						
+						<option value="4"{% if searchdata[0] == 4 %} selected {% endif %}>filename</option>
+						<option value="2"{% if searchdata[0] == 2 %} selected {% endif %}>filetype</option>
+						<option value="0"{% if searchdata[0] == 0 %} selected {% endif %}>id</option>
+						<option value="1"{% if searchdata[0] == 1 %} selected {% endif %}>user id</option>
+					</select>     order by: <select name=order_by>
+						<option value="4"{% if searchdata[2] == 4 %} selected {% endif %}>filename</option>
+						<option value="2"{% if searchdata[2] == 2 %} selected {% endif %} >filetype</option>
+						<option value="1"{% if searchdata[2] == 1 %} selected {% endif %} >user id</option>
+					</select>  <select name=desc_asc>
+						<option value="desc"{% if searchdata[3] == 'desc' %} selected {% endif %} >descending</option>
+						<option value="asc"{% if searchdata[3] == 'asc' %} selected {% endif %}>ascending</option>
+					</select>  <input type=submit value="filter">
+					
+				 </p>
+				 {% else %}
+				 <p class="actions">search: <input type=text name=search_query {% if searchdata[1] != -1 %}value={{ searchdata[1] }}{% endif %} >     sort by: <select name=search_by>
+						
 						<option value="4">filename</option>
 						<option value="2">filetype</option>
 						<option value="0">id</option>
-					</select>
-					<input type=submit value="search">
-				 </p>
+						<option value="1">user id</option>
+					</select>     order by: <select name=order_by>
+						<option value="4">filename</option>
+						<option value="2">filetype</option>
+						<option value="1">user id</option>
+					</select>  <select name=desc_asc>
+						<option value="desc">descending</option>
+						<option value="asc">ascending</option>
+					</select>  <input type=submit value="filter">
+					
+				 </p>				 
+				 {% endif %}
 			</form>
+			
+			<p class="pages">
+				{% if pagedata[1] is defined and pagedata[0] > 0 %}
+					{% if pagedata[1] > 1 %}
+						<a href="{{pagedata[1]-1}}?{{args}}">&lt&lt </a>
+					{% else %}
+						&lt&lt
+					{% endif %}
+					
+					{% for page in range (0, pagedata[0]+1) %}
+						{%if page+1 == pagedata[1] %}
+							{{page+1}}
+						{% else %}
+							<a href="{{page+1}}?{{args}}">{{page+1}}</a>
+						{% endif %}
+					{% endfor %}
+					
+					{% if pagedata[1] <= pagedata[0] %}
+						<a href="{{pagedata[1]+1}}?{{args}}"> &gt&gt</a>
+					{% else %}
+						&gt&gt
+					{% endif %}
+				{% endif %}	
+			</p>
+			
 			{% if files is defined %}
 				<table class="files">
 					<thead>
 						<th>id</th>
+						<th>uploader</th>
 						<th>url</th>
 						<th>filename</th>
 						<th>filetype</th>
@@ -51,6 +102,7 @@
 					{% for file in files %}
 						<tr>
 							<td>{{file[0]}}</td>
+							<td>{{file[1]}}</td>
 							<td>{{file[3]}}</td>
 							{% if file[4] is none %} 
 								{#backwards compatibility#}
@@ -65,12 +117,36 @@
 					{% endfor %}
 				</table>
 			{% else %}
-				<p>you don't have any files</p>
+				<p>This website be empty, dawg</p>
 			{% endif %}
+			
+			<!-- these scripts, while they do add extra functionality, are entirely unnessecary -->
+			<img src="" id="thumbnail">
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+			<script>
+				function checkURL(url) {
+					return(url.match(/\.(jpeg|jpg|gif|png|tiff)$/) != null);
+				}
+				
+				var $thumb = $("#thumbnail"); 
+				$(document).mousemove(function(e) { 
+					$thumb.offset({ top: e.pageY+10, left: e.pageX+10 }); 
+				});
+				
+				$('.link').mouseover(function() {
+					if (checkURL(this.href)){
+						$("#thumbnail").attr("src",this.href);
+					}
+				});
+				$('.link').mouseleave(function() {
+					$("#thumbnail").attr("src", "");
+				});
+			</script>
 		
 		</div>
 	</body>
-	
+
+
 	
 </html>
 
