--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,19 @@
 		<title>kelp's place</title>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='global.css') }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		
+		<!--meta tags for chrome and safari integration-->
+		<meta name="theme-color" content="#000000">
+		<link rel="apple-touch-icon" sizes="192x192" href="{{ url_for('static', filename='kelp-logo.png') }}">
+		<link rel="apple-touch-startup-image" href="{{ url_for('static', filename='kelp-logo.png') }}">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="application-name" content="kelp's place">
+		<meta name="apple-mobile-web-app-title" content="kelp's place">
+		
+		<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 	</head>
 	<body>
 		<div class="wrapper">
