--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,18 +8,12 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<pre class="title">
-      ___           ___           ___       ___     
-     /\__\         /\  \         /\__\     /\  \    
-    /:/  /        /::\  \       /:/  /    /::\  \   
-   /:/__/        /:/\:\  \     /:/  /    /:/\:\  \  
-  /::\__\____   /::\~\:\  \   /:/  /    /::\~\:\  \ 
- /:/\:::::\__\ /:/\:\ \:\__\ /:/__/    /:/\:\ \:\__\
- \/_|:|~~|~    \:\~\:\ \/__/ \:\  \    \/__\:\/:/  /
-    |:|  |      \:\ \:\__\    \:\  \        \::/  / 
-    |:|  |       \:\ \/__/     \:\  \        \/__/  
-    |:|  |        \:\__\        \:\__\              
-     \|__|         \/__/         \/__/              
+			<pre class="title">         #                    #  #
+# # ##      # #     ### ### ###      ##
+# # # #  #   #      ### ##  # #  #  # #
+### # #  ## # #     # # ### ###  ## ###
+
+			
 			</pre>
 			<p class="separator">---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
 			<div class="links">
