--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="description" content="kelp's website">
-		<title>kelp's place</title>
+		<meta name="description" content="unix file host">
+		<title>unix.media</title>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='global.css') }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
@@ -14,25 +14,18 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="application-name" content="kelp's place">
-		<meta name="apple-mobile-web-app-title" content="kelp's place">
+		<meta name="application-name" content="unix.media">
+		<meta name="apple-mobile-web-app-title" content="unix.media">
 		
 		<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 	</head>
 	<body>
 		<div class="wrapper">
-			<pre class="title">
-      ___           ___           ___       ___     
-     /\__\         /\  \         /\__\     /\  \    
-    /:/  /        /::\  \       /:/  /    /::\  \   
-   /:/__/        /:/\:\  \     /:/  /    /:/\:\  \  
-  /::\__\____   /::\~\:\  \   /:/  /    /::\~\:\  \ 
- /:/\:::::\__\ /:/\:\ \:\__\ /:/__/    /:/\:\ \:\__\
- \/_|:|~~|~    \:\~\:\ \/__/ \:\  \    \/__\:\/:/  /
-    |:|  |      \:\ \:\__\    \:\  \        \::/  / 
-    |:|  |       \:\ \/__/     \:\  \        \/__/  
-    |:|  |        \:\__\        \:\__\              
-     \|__|         \/__/         \/__/              
+			<pre class="title">    #                    #  #
+# # ##      # #     ### ### ###      ##
+# # # #  #   #      ### ##  # #  #  # #
+### # #  ## # #     # # ### ###  ## ###
+
 			</pre>
 			<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 			<div class="links">
