--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block links %}
-	<a href="/rice">rice</a>
+	<a href="/info">info</a>
 	<a href="/upload">uploads</a>
 	{% if session['username'] is defined %}
 		<a href="/logout">logout</a>
@@ -14,7 +14,9 @@
 		<p class="greeting">Welcome, {{session['username']}}.       <a href="/files">your files</a></p>
 		<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 	{% endif %}
-	<p>Welcome to my website. I am a programmer from Lithuania, with interests in graphic design, engineering, and video games. This website also serves as an image hosting site, but since i'm a little short on storage space, you will have to contact me for registration.</p>
-	<p> email: <a href="mailto:nojusr@gmail.com?subject=contakt lil ol kelp">nojusr@gmail.com</a></p>
-	<p>github: <a href="https://github.com/nojusr">https://github.com/nojusr</a></p>
+	<p>Welcome to unix.media. This is a private file hosting website. While not open to 
+	registration, I may consider allowing new users on a per-case basis in the future.
+</p>
+	<p> email: <a href="mailto:unixmedia@protonmail.ch?subject=unix.media registration">unixmedia@protonmail.ch</a></p>
+	<p>source code: <a href="https://github.com/nojusr/kelp.ml">https://github.com/nojusr/kelp.ml</a></p>
 {% endblock %}
