--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,7 +7,7 @@
 	<p class="stats">Upload stats:   Disk usage:  {{stats[0]}}   Files: {{stats[1]}}   Users: {{stats[2]}} </p>
 	<p class="separator">---------------------------------------------------------------------------------------------------------------------------</p>
 	<p>You can upload to this site using curl like so:</p>
-	<div class="code">$curl -F'u_clean=on' -F'upload_key=youruploadkey' -F'u_file=@/path/to/your.file' https://kelp.ml/upload</div>
+	<div class="code">$curl -F'u_clean=on' -F'upload_key=youruploadkey' -F'u_file=@/path/to/your.file' https://unix.media/upload</div>
 	<p>The command above, assuming that everything is correct, will return nothing but a link</p>
 	
 	{% if msg is defined %}
@@ -15,6 +15,9 @@
 	{% endif %}
 	{% if link is defined %}
 		<p class="msg"><a href={{link}}>{{link}}</a></p>
+	{% endif %}
+	{% if link2 is defined %}
+                <p class="msg"><a href={{link2}}>{{link2}}</a></p>
 	{% endif %}
 	<form method= post  enctype="multipart/form-data">
 		
